   jumps, and some sections of the envelope could get lost, especially in
   monophonic mode.
 * Bugfix: decayed notes were not garbage collected when envelopes were
   assigned only to the amplitude parameter of the oscillators, but not to
   the first oscillator's subharmonic amplitude which was left at the default 0
   setting. (E.g. the Bells 1 and 2 presets while holding the sustain pedal.)

v2.4.4 (2023-11-19)
 * Reduced RAM usage.
 * Bugfix: hosts that use variable length rendering blocks could cause JS80P in
   some circumstance to leave garbage in the buffers of delay based effects
   when they decayed into silence, which (depending on the settings of the
   patch) could produce audible glitches. Now the delay buffers are properly
   cleaered when both their input and their feedback line decays into silence.
 * Bugfix: despite the efforts in v1.5.1, in some circumstances, short delay
   times (lower than 3-5 milliseconds) could still make the feedback lines
   noisy in delay based effects in hosts which use variable length rendering
   blocks (e.g. FL Studio). The rendering logic has been adjusted to prevent
   delay feedback lines from falling behind and becoming discontinuous when the
   host requests a large rendering batch after a sequence of short ones.

v2.4.3 (2023-11-18)
 * Preview version of v2.4.4, not ready for production use.

v2.4.2 (2023-11-12)
 * The MTS-ESP mode (continuous or note-on) is now shown at the beginning of
   the tuning selector for better readability.
 * Bugfix: Envelope 3 of the Dystopian Cathedral preset was accidentally
   configured to be dynamic.
 * Bugfix: inaccuracy has been turned off for the unused oscillator in the
   Gloomy Brass preset.
 * Bugfix: the release time of Envelope 4 in the Gloomy Brass Raindrops preset
   has been increased so that when a Note Off event occurs right after the
   "raindrop" sound kicks in, its decay is more natural.
 * Bugfix: MTS-ESP related information has been corrected in README.txt.
